[package]
name = "sanitise"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["<robson.caleb.299@gmailcom> Caleb Robson"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
yaml-rust = "0.4"

[workspace]
members = ["sanity"]

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 16
