[package]
name = "sanitise"
version.workspace = true
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors.workspace = true
description = "Headache-free data clean-up"
repository = "https://github.com/Spartan2909/sanitise"
documentation = "https://docs.rs/sanitise"
keywords = ["data-processing", "clean-up"]
categories = ["no-std", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
yaml-rust = "0.4"

[features]
benchmark = []

[workspace]
members = ["sanity", "strings-test"]
package.version = "0.3.0"
package.authors = ["<robson.caleb.299@gmailcom> Caleb Robson"]

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 16
