[package]
name = "sanitise"
version.workspace = true
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Headache-free data clean-up"
repository = "https://github.com/Spartan2909/sanitise"
documentation = "https://docs.rs/sanitise"
keywords = ["data-processing", "clean-up"]
categories = ["no-std", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
yaml-rust = "0.4"

[features]
benchmark = []

[lints]
workspace = true

[workspace]
members = ["sanity", "strings-test"]
package.version = "0.4.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_panics_doc = "allow"
multiple_unsafe_ops_per_block = "deny"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
todo = "warn"
undocumented_unsafe_blocks = "deny"
use_self = "allow"
#unwrap_used = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
